--- a/src/main/resources/templates/customers-list.html
+++ b/src/main/resources/templates/customers-list.html
@@ -1,10 +1,106 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Title</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 </head>
 <body>
-$END$
+<div class="container-fluid px-0" style="height: 100vh">
+    <nav class="navbar navbar-expand-sm navbar-dark rounded" style="height: 10%; background-color: #52596c">
+        <!-- Brand -->
+        <a class="navbar-brand" href="#">Premier Đà Nẵng</a>
+
+        <!-- Links -->
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="#">Trang Chủ</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Liên Hệ</a>
+            </li>
+
+            <!-- Dropdown -->
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+                    Tuyển Dụng
+                </a>
+                <div class="dropdown-menu">
+                    <a class="dropdown-item" href="#">Link 1</a>
+                    <a class="dropdown-item" href="#">Link 2</a>
+                    <a class="dropdown-item" href="#">Link 3</a>
+                </div>
+            </li>
+        </ul>
+    </nav>
+    <div class="row px-0 mx-0" style="height: 90%">
+        <div class="col-2 px-0">
+            <ul class="list-group border border-primary h-100">
+                <li class="list-group-item active">Home</li>
+                <li class="list-group-item">Quản lí nhân viên</li>
+                <li class="list-group-item">Quản lí dịch vụ</li>
+                <li class="list-group-item">Quản lí khách hàng</li>
+                <li class="list-group-item">Quản lí hợp đồng</li>
+                <li class="list-group-item">Quản lí hợp đồng chi tiết</li>
+            </ul>
+        </div>
+        <div class="col-10 p-5">
+            <div class="row justify-content-between">
+                <h2>Danh Sách Khách Hàng</h2>
+                <div class="d-flex">
+                    <input class="form-control mr-3" type="text" style="width: 300px" placeholder="nhập tên tìm kiếm"/>
+                    <button class="btn btn-outline-success">Search</button>
+                </div>
+            </div>
+
+            <div class="row mt-3 px-3">
+                <button class="btn btn-outline-success mr-4">Thêm Mới</button>
+                <button class="btn btn-outline-success mr-4">Sắp Xếp A-Z</button>
+                <button class="btn btn-outline-success">Sắp Xếp Z-A</button>
+                <table class="table mt-3 table-striped" style="font-size: 12px">
+                    <thead>
+                    <tr>
+                        <th>ID</th>
+                        <th>Mã Khách Hàng</th>
+                        <th>Loại Khách Hàng</th>
+                        <th>Họ Và Tên</th>
+                        <th>Ngày Sinh</th>
+                        <th>CMND</th>
+                        <th>Điện Thoại</th>
+                        <th>Email</th>
+                        <th>Địa Chỉ</th>
+                        <th>Action</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <th:block>
+                        <tr th:each="customer : ${customers}">
+                            <td th:text="${customer.id}"></td>
+                            <td th:text="${customer.customerCode}"></td>
+                            <td th:text="${customer.customerType.name}"></td>
+                            <td th:text="${customer.fullName}"></td>
+                            <td th:text="${customer.birthDay}"></td>
+                            <td th:text="${customer.idCard}"></td>
+                            <td th:text="${customer.phone}"></td>
+                            <td th:text="${customer.email}"></td>
+                            <td th:text="${customer.address}"></td>
+                            <td>
+                                <button class="btn btn-sm btn-warning mr-3">Sửa</button>
+                                <button class="btn btn-sm btn-danger">Xóa</button>
+                            </td>
+                        </tr>
+                    </th:block>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<script src="https://code.jquery.com/jquery-3.5.1.min.js" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 </body>
 </html>
